seems to be better fix for issue #332